updated site for SEO

--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="please feel free to contact Big Pastries Anonymous!"
+    />
     <link rel="stylesheet" href="/CSS/style.css" />
-    <title>Croissant</title>
+    <title>contact information - Big Pastries Anonymous</title>
   </head>
   <body>
     <h1>☎️Contact Us!</h1>
@@ -14,9 +18,11 @@
       <a href="#">croissant.love@AOL.com</a>
     </h3>
     <footer class="links">
-      <a href="/">Home</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Big Pastries Anonymous homepage">Home</a>
+      <a href="/photo.html" title="Big Pastries Anonymous photos">Photo</a>
+      <a href="/contact.html" title="Big Pastries Anonymous contact information"
+        >Contact</a
+      >
     </footer>
   </body>
 </html>
