--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This website is an exclusive look in to the world of Big Pastries Anonymous- a totally fiction family owned pastry company!"
+    />
     <link rel="stylesheet" href="/CSS/style.css" />
-    <title>Croissant Site</title>
+    <title>
+      Everything you need to know about Croissant - Big Pastries Anonymous
+    </title>
   </head>
   <body>
     <h1>🥐 Croissant</h1>
@@ -13,9 +19,11 @@
       Croissant. Type, Viennoiserie. Course, Breakfast. Place of origin, France.
     </p>
     <footer class="links">
-      <a href="/">Home</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Big Pastries Anonymous homepage">Home</a>
+      <a href="/photo.html" title="Big Pastries Anonymous photos">Photo</a>
+      <a href="/contact.html" title="Big Pastries Anonymous contact information"
+        >Contact</a
+      >
     </footer>
   </body>
 </html>
