--- a/photo.html
+++ b/photo.html
@@ -3,18 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is a photograph of the worlds biggest croissant"
+    />
     <link rel="stylesheet" href="/CSS/style.css" />
-    <title>Croissant</title>
+    <title>
+      A photo example of the perfect croissant - Big Pastries Anonymous
+    </title>
   </head>
   <body>
     <h1>📷This is a photo of a croissant</h1>
     <img
       src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/151/953/original/Vegan-Croissants-1.jpg?1733246103"
+      alt="croissant photo"
     />
     <footer class="links">
-      <a href="/">Home</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="/" title="Big Pastries Anonymous homepage">Home</a>
+      <a href="/photo.html" title="Big Pastries Anonymous photos">Photo</a>
+      <a href="/contact.html" title="Big Pastries Anonymous contact information"
+        >Contact</a
+      >
     </footer>
   </body>
 </html>
